--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,11 +43,24 @@ jobs:
           key: v1-{{ .Branch }}-{{ epoch }}
           paths:
             - /caches/app.tar
-      - deploy:
-          name: Push application Docker image
-          command: |
-            if [ "${CIRCLE_BRANCH}" == "main" ]; then
-              docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASS
-              docker tag app "${REGISTRY}/rajshivage/flask-app:${CIRCLE_SHA1}"
-              docker push "${REGISTRY}/rajshivage/flask-app:${CIRCLE_SHA1}"
-            fi
+deploy:
+  steps:
+    - deploy:
+        name: Push application Docker image
+        command: |
+          if [ "${CIRCLE_BRANCH}" == "main" ]; then
+            docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASS
+            docker tag app "${REGISTRY}/rajshivage/flask-app:${CIRCLE_SHA1}"
+            docker push "${REGISTRY}/rajshivage/flask-app:${CIRCLE_SHA1}"
+          fi
+workflows:
+  Workflow:
+    jobs:
+      - build:
+      - Hold-for-Approval:
+          type: approval
+          requires:
+            - build
+      - deploy
+          requires:
+            - Hold-for-Approval
